--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ img {
     #home h1 {
         font-size: 2.5em;
         margin-bottom: 20px;
+        padding-left: 30px; /* Issue related to padding, edited 2/26/25 */
     }
 
     #home p {
