--- a/style.css
+++ b/style.css
@@ -105,12 +105,14 @@ img {
     #projects p1 {
     font-size: 2.5em;
     margin-bottom: 20px;
+    font-weight: 900; /* Extra bold/thick */
     padding-left: 30;  /* Recommendation made */
     }
 
     #skills s1 {
     font-size: 2.5em;
     margin-bottom: 20px;
+    font-weight: 900; /* Extra bold/thick */
     padding-left: 30;  /* Recommendation made */
     }
 
